# casr-logbook

./: .gitignore  .gitmodules  LICENSE  README.md  cabal.project  cabal.sandbox.config  casr-logbook.cabal  changelog  todo
.cabal-sandbox/: add-source-timestamps
src/Data/Aviation/Casr/: Logbook.hs
src/Data/Aviation/Casr/Logbook/: ARN.hs  Aircraft.hs  AircraftFlight.hs  Aviator.hs  Briefing.hs  Command.hs  DOB.hs  Date.hs  DayNight.hs  Engine.hs  Entries.hs  Entry.hs  Exam.hs  ExamEntry.hs  FlightEntry.hs  FlightLog.hs  FlightLogEntries.hs  FlightLogEntry.hs  FlightPath.hs  FlightPoint.hs  Hours.hs  Image.hs  ImageType.hs  Images.hs  Location.hs  Log.hs  Logbook.hs  Meta.hs  Name.hs  PiC.hs  PoB.hs  Rating.hs  Reports.hs  Sequence.hs  SimulatorFlight.hs  Time.hs  TimeAmount.hs  Totals.hs  TrackLog.hs  TrackLogType.hs  (+8 more)
src/Data/Aviation/Casr/Logbook/Html/: Html.hs
src/Data/Aviation/Casr/Logbook/Meta/: AircraftFlightExpense.hs  AircraftFlightMeta.hs  AircraftLandingExpense.hs  AircraftUsageExpense.hs  BriefingExpense.hs  BriefingMeta.hs  ExamExpense.hs  ExamMeta.hs  Html.hs  Image.hs  ImageType.hs  Passenger.hs  SimulatorFlightExpense.hs  SimulatorFlightMeta.hs  TrackLog.hs  TrackLogType.hs  TrackLogs.hs  Video.hs  VideoType.hs  Visualisation.hs
src/Data/Aviation/Casr/Logbook/Printer/: Html.hs  Markdown.hs
src/Data/Aviation/Casr/Logbook/Reports/: FlightTimeReport.hs  Html.hs  Meta.hs  SimulatorTimeReport.hs  TakeOffLanding90.hs
src/Data/Aviation/Casr/Logbook/Types/: Aircraft.hs  AircraftFlight.hs  Aviator.hs  Briefing.hs  Command.hs  DayNight.hs  Engine.hs  Entries.hs  Entry.hs  Exam.hs  FlightPath.hs  FlightPoint.hs  Instruction.hs  Location.hs  Logbook.hs  Rating.hs  Time.hs  (+2 more)
(+2 files in other folders)
