name:               casr-logbook
version:            0.4.0
license:            OtherLicense
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2016 Tony Morris
synopsis:           CASR 61.345 Pilot Personal Logbook
category:           Aviation
description:        
  <<https://i.imgur.com/p6LT40r.png>>
  .
  CASR 61.345 Pilot Personal Logbook
  .
  <<https://i.imgur.com/Lfhcmtg.png>>

homepage:           https://github.com/tonymorris/casr-logbook
bug-reports:        https://github.com/tonymorris/casr-logbook/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/casr-logbook.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , containers >= 0.4 && < 0.6
                    , lucid >= 2.9 && < 3
                    , digit >= 0.2.8 && < 0.3
                    , time >= 1.5 && < 2
                    , lucid >= 2.9 && < 3
                    , lens >= 4.1 && < 5
                    , text >= 1.2 && < 1.3
                    , vfr-waypoints >= 0.1.0.1 && < 0.2

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Casr.Logbook
